# LanGram

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
client/: .env.example  .eslintrc.cjs  index.html  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  main.tsx  styles.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs  local_cache.rs  main.rs
client/src/api/: auth.api.ts  conversations.api.ts  downloadSettings.api.ts  files.api.ts  friends.api.ts  http.ts  localCache.api.ts  localFiles.api.ts  users.api.ts
client/src/components/: AppLogo.tsx  UserAvatar.tsx
client/src/crypto/: messageCrypto.ts
client/src/i18n/: en-US.json  index.tsx  zh-CN.json
client/src/realtime/: socket.ts
client/src/routes/: index.tsx
client/src/stores/: auth.store.ts  chat.store.ts  localCache.store.ts  network.store.ts  settings.store.ts
client/src/theme/: ThemeProvider.tsx
client/src/utils/: authErrors.ts  conversationUiState.ts  desktopNotification.ts  device.ts  fileIcons.ts  imageCompression.ts  localConfig.ts  serverHealth.ts
docs/: LanGram_MVP_Codex_Spec.md  Phase_8_13_Windows_Notifications.md
server/: .env.example  .eslintrc.cjs  package.json  prisma.config.ts  tsconfig.json
server/prisma/: schema.prisma  seed-test-users.ts
server/src/: app.module.ts  main.ts
server/src/auth/: auth-hash.ts  auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  email.service.ts  (+2 more)
(+76 files in other folders)
