[package]
name = "langram-client"
version = "0.1.0"
description = "LanGram desktop client"
authors = ["LanGram"]
edition = "2021"

[lib]
name = "langram_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
