[package]
name = "langram-client"
version = "0.1.0"
description = "LanGram desktop client"
authors = ["LanGram"]
edition = "2021"

[lib]
name = "langram_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-notification = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
